fixed Portfolio section overlap in Mobile view

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -53,7 +53,7 @@ margin: 1.2rem 0 2rem;
 
    
    .portfolio__container{
-    background: red;
+    
     grid-template-columns: 1fr;
    
     
